--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </style>
   </head>
   <body>
-  <div style="margin-top: 25px; flex-direction: column; justify-content: space-around" class="tab-panel active"><div><h2 style="padding-top: 10px; text-align: center">Top Track, Field, and Swimming Performances</h2><div style="text-align: center; padding-bottom: 20px;">Performances measured by how improbable they were at the time. A score of 50 represents the best time in the world on an average year, while a score of 99 is a once in a century event. The right column shows the current world records in each event sorted by the performance needed to break them.</div></div>
-<div style="display: flex; margin-top: 25px; flex-direction: row; justify-content: space-around">  <div style="max-width: 500px"><div style="text-align: center; padding-bottom: 10px">All-Time</div>
+  <div style="margin-top: 25px; flex-direction: column; justify-content: space-around; align-items: center" class="tab-panel active"><div><h2 style="padding-top: 10px; text-align: center">Top Track, Field, and Swimming Performances</h2><div style="text-align: center; padding-bottom: 20px; max-width: 1000px">Performances measured by how improbable they were at the time. A score of 50 represents the best time in the world on an average year, while a score of 99 is a once in a century event. The right column shows the current world records in each event sorted by the performance needed to break them.</div></div>
+<div style="display: flex; margin-top: 25px; flex-direction: row; justify-content: space-around; min-width: 1200px;">  <div style="max-width: 500px"><div style="text-align: center; padding-bottom: 10px">All-Time Performances</div>
     <div class="mdc-card" style="margin-bottom: 20px; max-width: 500px;">
       <div style="display: flex; justify-content: space-between; align-items: center; min-height: 155px">
         <div style="display: flex; margin-left: 25px; height: 120px; width: 120px; justify-content: center; align-items: center">
